WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40255
[Qt] InspectorClientQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=40255
Summary
[Qt] InspectorClientQt.cpp has coding-style errors
Anders Bakken
Reported
2010-06-07 12:54:41 PDT
[Qt] InspectorClientQt.cpp has coding-style errors
Attachments
Patch
(1.46 KB, patch)
2010-06-07 12:55 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-06-07 12:55:07 PDT
Created
attachment 58073
[details]
Patch
WebKit Commit Bot
Comment 2
2010-06-09 19:01:00 PDT
Comment on
attachment 58073
[details]
Patch Clearing flags on attachment: 58073 Committed
r60928
: <
http://trac.webkit.org/changeset/60928
>
WebKit Commit Bot
Comment 3
2010-06-09 19:01:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug