2010-06-09  Anders Bakken  <agbakken@gmail.com>

Reviewed by David Levin.

        [Qt] InspectorClientQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40255

        * WebCoreSupport/InspectorClientQt.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@60928 bbb929c8-8fbe-4397-9dbb-9b2b20218538