third_party/WebKit/WebKit/qt/WebCoreSupport/InspectorClientQt.cpp
@@ -32,19 +32,17 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "InspectorClientQt.h"
 
+#include "InspectorController.h"
+#include "NotImplemented.h"
+#include "Page.h"
+#include "PlatformString.h"
 #include "qwebinspector.h"
 #include "qwebinspector_p.h"
 #include "qwebpage.h"
 #include "qwebpage_p.h"
 #include "qwebview.h"
-
-#include <QtCore/QSettings>
 #include <QtCore/QCoreApplication>
-
-#include "InspectorController.h"
-#include "NotImplemented.h"
-#include "Page.h"
-#include "PlatformString.h"
+#include <QtCore/QSettings>
 
 namespace WebCore {
 
